Add a new refactoring layer over services.